--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelBook - Your Dream Destination Awaits</title>
+    <title>Travelbooks - Your Dream Destination Awaits</title>
     <meta name="description" content="Discover amazing travel packages and book your next adventure with TravelBook. Premium destinations, luxury accommodations, and unforgettable experiences.">
     
     <!-- Tailwind CSS -->
@@ -44,7 +44,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
                         <h1 class="text-2xl font-bold text-primary-600">
-                            <i class="fas fa-plane mr-2"></i>TravelBook
+                            <i class="fas fa-plane mr-2"></i>Travelbooks
                         </h1>
                     </div>
                 </div>
