--- a/users.html
+++ b/users.html
@@ -197,6 +197,7 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/upstash-config.js"></script>
     <script src="assets/js/users.js"></script>
 </body>
 </html>
