--- a/login.html
+++ b/login.html
@@ -110,6 +110,7 @@
     
     <!-- Scripts -->
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/upstash-config.js"></script>
     <script src="assets/js/login.js"></script>
 </body>
 </html>
