--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <body class="bg-gradient-to-br from-primary-600 to-blue-800 min-h-screen flex items-center justify-center">
     <!-- Background Pattern -->
     <div class="absolute inset-0 bg-black opacity-20"></div>
-    <div class="absolute inset-0" style="background-image: url('data:image/svg+xml,<svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><g fill="%23ffffff" fill-opacity="0.1"><circle cx="30" cy="30" r="2"/></g></svg>');"></div>
+    <div class="absolute inset-0" style="background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg width=%2260%22 height=%2260%22 viewBox=%220 0 60 60%22 xmlns=%22http://www.w3.org/2000/svg%22%3E%3Cg fill=%22none%22 fill-rule=%22evenodd%22%3E%3Cg fill=%22%23ffffff%22 fill-opacity=%220.1%22%3E%3Ccircle cx=%2230%22 cy=%2230%22 r=%222%22/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');"></div>
     
     <!-- Login Card -->
     <div class="relative z-10 w-full max-w-md mx-4">
