--- a/debug-packages.html
+++ b/debug-packages.html
@@ -36,6 +36,7 @@
     <!-- Include the required scripts -->
     <script src="assets/js/upstash-config.js"></script>
     <script src="assets/js/package-manager.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <script>
         async function debugPackageData() {
