--- a/admin.html
+++ b/admin.html
@@ -187,10 +187,14 @@
                             <label for="currency" class="block text-sm font-medium text-gray-700">Currency</label>
                             <select id="currency" name="currency" 
                                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-primary-500 focus:border-primary-500">
-                                <option value="USD">USD</option>
-                                <option value="EUR">EUR</option>
-                                <option value="GBP">GBP</option>
-                                <option value="CAD">CAD</option>
+                                <option value="USD">USD - US Dollar</option>
+                                <option value="EUR">EUR - Euro</option>
+                                <option value="GBP">GBP - British Pound</option>
+                                <option value="CAD">CAD - Canadian Dollar</option>
+                                <option value="PHP">PHP - Philippine Peso</option>
+                                <option value="JPY">JPY - Japanese Yen</option>
+                                <option value="AUD">AUD - Australian Dollar</option>
+                                <option value="SGD">SGD - Singapore Dollar</option>
                             </select>
                         </div>
                         <div>
