--- a/index.html
+++ b/index.html
@@ -133,6 +133,26 @@
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">
                     Discover our most popular destinations and exclusive travel experiences.
                 </p>
+                
+                <!-- Currency Converter -->
+                <div class="mt-8 flex justify-center">
+                    <div class="bg-white rounded-lg shadow-md p-4 inline-flex items-center space-x-4">
+                        <span class="text-gray-700 font-medium">View prices in:</span>
+                        <select id="currency-selector" class="border border-gray-300 rounded-md px-3 py-2 focus:ring-primary-500 focus:border-primary-500">
+                            <option value="USD">USD - US Dollar</option>
+                            <option value="EUR">EUR - Euro</option>
+                            <option value="GBP">GBP - British Pound</option>
+                            <option value="CAD">CAD - Canadian Dollar</option>
+                            <option value="PHP">PHP - Philippine Peso</option>
+                            <option value="JPY">JPY - Japanese Yen</option>
+                            <option value="AUD">AUD - Australian Dollar</option>
+                            <option value="SGD">SGD - Singapore Dollar</option>
+                        </select>
+                        <div id="conversion-status" class="text-sm text-gray-500">
+                            <i class="fas fa-sync-alt animate-spin"></i> Loading rates...
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" id="packages-container">
