--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
-                        <h1 class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors cursor-pointer">
-                            <i class="fas fa-plane mr-2 transform hover:rotate-12 transition-transform"></i>Travelbooks
+                        <h1 class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors cursor-pointer flex items-center">
+                            <img src="logo/logo123.png" alt="Travelbooks Logo" class="w-8 h-8 mr-2 transform hover:rotate-12 transition-transform">
+                            Travelbooks
                         </h1>
                     </div>
                 </div>
@@ -80,7 +81,10 @@
         <div id="mobile-menu" class="mobile-menu fixed inset-0 bg-white z-40 md:hidden">
             <div class="flex flex-col h-full">
                 <div class="flex justify-between items-center p-4 border-b">
-                    <h1 class="text-xl font-bold text-primary-600">Travelbooks</h1>
+                    <h1 class="text-xl font-bold text-primary-600 flex items-center">
+                        <img src="logo/logo.png" alt="Travelbooks Logo" class="w-6 h-6 mr-2">
+                        Travelbooks
+                    </h1>
                     <button id="close-mobile-menu" class="text-gray-500 hover:text-primary-600 p-2">
                         <i class="fas fa-times text-xl"></i>
                     </button>
@@ -394,8 +398,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">
-                        <i class="fas fa-plane mr-2"></i>TravelBook
+                    <h3 class="text-2xl font-bold mb-4 flex items-center">
+                        <img src="logo/logo.png" alt="Travelbooks Logo" class="w-8 h-8 mr-2">
+                        TravelBook
                     </h3>
                     <p class="text-gray-400 mb-4">Your trusted partner for unforgettable travel experiences around the world.</p>
                     <div class="flex space-x-4">
