--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="flex flex-col h-full">
                 <div class="flex justify-between items-center p-4 border-b">
                     <h1 class="text-xl font-bold text-primary-600 flex items-center">
-                        <img src="logo/logo.png" alt="Travelbooks Logo" class="w-6 h-6 mr-2">
+                        <img src="logo/logo123.png" alt="Travelbooks Logo" class="w-6 h-6 mr-2">
                         Travelbooks
                     </h1>
                     <button id="close-mobile-menu" class="text-gray-500 hover:text-primary-600 p-2">
@@ -100,7 +100,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="relative h-screen flex items-center justify-center bg-gradient-to-br from-primary-600 via-blue-700 to-blue-900 overflow-hidden">
+    <section id="home" class="relative h-screen flex items-center justify-center bg-gradient-to-br from-primary-600 via-blue-700 to-blue-900 overflow-hidden pt-16">
         <!-- Animated Background Elements -->
         <div class="absolute inset-0">
             <div class="floating-shapes">
@@ -151,13 +151,6 @@
             </div>
         </div>
         
-        <!-- Enhanced Scroll Indicator -->
-        <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce cursor-pointer group" onclick="document.getElementById('packages').scrollIntoView({behavior: 'smooth'})">
-            <div class="flex flex-col items-center text-white group-hover:text-yellow-300 transition-colors">
-                <span class="text-sm mb-2 opacity-70">Scroll to explore</span>
-                <i class="fas fa-chevron-down text-2xl group-hover:scale-110 transition-transform"></i>
-            </div>
-        </div>
     </section>
 
     <!-- Features Section -->
@@ -399,7 +392,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-2xl font-bold mb-4 flex items-center">
-                        <img src="logo/logo.png" alt="Travelbooks Logo" class="w-8 h-8 mr-2">
+                        <img src="logo/logo123.png" alt="Travelbooks Logo" class="w-8 h-8 mr-2">
                         TravelBook
                     </h3>
                     <p class="text-gray-400 mb-4">Your trusted partner for unforgettable travel experiences around the world.</p>
