--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-6">
-                    Why Choose <span class="text-primary-600">TravelBook</span>?
+                    Why Choose <span class="text-primary-600">Travelbooks</span>?
                 </h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
                     We provide exceptional travel experiences with unmatched service and attention to detail.
