--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body class="bg-gray-50 overflow-x-hidden">
     <!-- Navigation -->
-    <nav id="navbar" class="bg-white/95 backdrop-blur-md shadow-lg fixed w-full z-50 transition-all duration-300">
+    <nav id="navbar" class="bg-white shadow-lg fixed w-full z-50 transition-all duration-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
@@ -234,8 +234,7 @@
                             <option value="SGD">SGD - Singapore Dollar</option>
                         </select>
                         <div id="conversion-status" class="text-sm text-gray-500 flex items-center space-x-2">
-                            <i class="fas fa-sync-alt animate-spin"></i>
-                            <span>Loading rates...</span>
+                            <i class="fas fa-check text-green-500"></i>
                         </div>
                     </div>
                 </div>
@@ -540,11 +539,9 @@
             const navbar = document.getElementById('navbar');
             function updateNavbar() {
                 if (window.scrollY > 50) {
-                    navbar.classList.add('bg-white/98', 'shadow-xl');
-                    navbar.classList.remove('bg-white/95');
+                    navbar.classList.add('shadow-xl');
                 } else {
-                    navbar.classList.remove('bg-white/98', 'shadow-xl');
-                    navbar.classList.add('bg-white/95');
+                    navbar.classList.remove('shadow-xl');
                 }
             }
             
