--- a/admin.html
+++ b/admin.html
@@ -96,7 +96,7 @@
             <div class="bg-white rounded-lg shadow p-6">
                 <div class="flex items-center">
                     <div class="p-2 bg-purple-100 rounded-lg">
-                        <i class="fas fa-peso-sign text-purple-600 text-xl"></i>
+                        <i class="fas fa-dollar-sign text-purple-600 text-xl"></i>
                     </div>
                     <div class="ml-4">
                         <p class="text-sm font-medium text-gray-600">Average Price</p>
@@ -181,11 +181,11 @@
                             <label for="currency" class="block text-sm font-medium text-gray-700">Currency</label>
                             <select id="currency" name="currency" 
                                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-primary-500 focus:border-primary-500">
-                                <option value="PHP">PHP - Philippine Peso</option>
                                 <option value="USD">USD - US Dollar</option>
                                 <option value="EUR">EUR - Euro</option>
                                 <option value="GBP">GBP - British Pound</option>
                                 <option value="CAD">CAD - Canadian Dollar</option>
+                                <option value="PHP">PHP - Philippine Peso</option>
                                 <option value="JPY">JPY - Japanese Yen</option>
                                 <option value="AUD">AUD - Australian Dollar</option>
                                 <option value="SGD">SGD - Singapore Dollar</option>
