--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
                 
                 <button type="submit" 
                         id="login-btn"
-                        class="w-full bg-primary-600 hover:bg-primary-700 text-white font-bold py-3 px-4 rounded-lg transition-colors transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2">
+                        class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-6 rounded-lg transition-colors transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 shadow-lg">
                     <span class="flex items-center justify-center">
                         <i class="fas fa-sign-in-alt mr-2"></i>
                         <span id="login-btn-text">Sign In</span>
