--- a/admin.html
+++ b/admin.html
@@ -24,19 +24,19 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
-                        <h1 class="text-2xl font-bold text-primary-600">
+                        <h1 class="text-2xl font-bold text-blue-600">
                             <i class="fas fa-cog mr-2"></i>Travelbooks Admin
                         </h1>
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="index.html" class="text-gray-500 hover:text-primary-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">
+                    <a href="index.html" class="text-gray-500 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">
                         <i class="fas fa-home mr-1"></i>View Site
                     </a>
-                    <a href="users.html" class="text-gray-500 hover:text-primary-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">
+                    <a href="users.html" class="text-gray-500 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium transition-colors">
                         <i class="fas fa-users mr-1"></i>Users
                     </a>
-                    <button id="refresh-packages" class="bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 rounded-md text-sm font-medium transition-colors">
+                    <button id="refresh-packages" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md text-sm font-medium transition-colors shadow-md">
                         <i class="fas fa-sync-alt mr-1"></i>Refresh
                     </button>
                     <div class="flex items-center space-x-2">
@@ -232,7 +232,7 @@
                     
                     <div class="flex items-center">
                         <input type="checkbox" id="is_active" name="is_active" checked 
-                               class="h-4 w-4 text-primary-600 focus:ring-primary-500 border-gray-300 rounded">
+                               class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
                         <label for="is_active" class="ml-2 block text-sm text-gray-900">Active Package</label>
                     </div>
                     
@@ -242,7 +242,7 @@
                             Cancel
                         </button>
                         <button type="submit" 
-                                class="bg-primary-600 hover:bg-primary-700 text-white font-bold py-2 px-4 rounded">
+                                class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg">
                             Save Package
                         </button>
                     </div>
