--- a/admin.html
+++ b/admin.html
@@ -113,6 +113,22 @@
             </button>
         </div>
 
+        <!-- Filter Buttons -->
+        <div class="flex flex-wrap gap-3 mb-6">
+            <button id="filter-all" class="filter-btn active bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg font-medium transition-colors">
+                <i class="fas fa-list mr-2"></i>All Packages
+            </button>
+            <button id="filter-popular" class="filter-btn bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg font-medium transition-colors">
+                <i class="fas fa-fire mr-2"></i>Popular
+            </button>
+            <button id="filter-luxury" class="filter-btn bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg font-medium transition-colors">
+                <i class="fas fa-crown mr-2"></i>Luxury
+            </button>
+            <button id="filter-budget" class="filter-btn bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg font-medium transition-colors">
+                <i class="fas fa-dollar-sign mr-2"></i>Budget
+            </button>
+        </div>
+
         <!-- Packages Table -->
         <div class="bg-white rounded-lg shadow overflow-hidden">
             <div class="px-6 py-4 border-b border-gray-200">
@@ -126,6 +142,7 @@
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Destination</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Price</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Rating</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Category</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                         </tr>
@@ -228,6 +245,17 @@
                                 <option value="bg-purple-500">Purple</option>
                             </select>
                         </div>
+                    </div>
+                    
+                    <div>
+                        <label for="tag" class="block text-sm font-medium text-gray-700">Package Category</label>
+                        <select id="tag" name="tag" 
+                                class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-primary-500 focus:border-primary-500">
+                            <option value="">Select Category</option>
+                            <option value="popular">Popular</option>
+                            <option value="luxury">Luxury</option>
+                            <option value="budget">Budget</option>
+                        </select>
                     </div>
                     
                     <div class="flex items-center">
